Bug 1247706 - "Please don't disable WebGL if crashed on WebGL context". r=dvander a=lizzard

MozReview-Commit-ID: EPcWFJQFXvG

--HG--
extra : rebase_source : a6e50904c8de604cbe9f3e832746b80fa473dd2b
extra : source : 173c17843fa6773bf2a288a1a378c8822a71ea70